[package]
name = "async-locking"
version = "0.1.0"
edition = "2021"

[features]
default = [ "tokio" ]
tokio = [ "dep:tokio" ]
async-std = [ "dep:async-std" ]
blocking = [ "dep:blocking" ]

[dependencies]
tokio = { version = "1", optional = true, default-features = false }
async-std = { version = "1", optional = true, default-features = false, features = [ "alloc", "default" ] }
blocking = { version = "1", optional = true, default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [ "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.38.32", features = [ "fs" ] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = [ "rt", "rt-multi-thread", "fs", "macros", "time" ] }
async-std = { version = "1", default-features = true, features = [ "attributes" ] }
